chore: update manifests
Signed-off-by: Alberto Falossi <afalossi@redhat.com>

--- a/bundle/manifests/observability-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/observability-operator.clusterserviceversion.yaml
@@ -330,6 +330,18 @@ spec:
           - update
           - watch
         - apiGroups:
+          - authentication.k8s.io
+          resources:
+          - tokenreviews
+          verbs:
+          - create
+        - apiGroups:
+          - authorization.k8s.io
+          resources:
+          - subjectaccessreviews
+          verbs:
+          - create
+        - apiGroups:
           - autoscaling
           resources:
           - horizontalpodautoscalers
@@ -402,6 +414,16 @@ spec:
           verbs:
           - create
           - get
+          - update
+        - apiGroups:
+          - monitoring.coreos.com
+          resources:
+          - servicemonitors
+          verbs:
+          - create
+          - delete
+          - get
+          - patch
           - update
         - apiGroups:
           - monitoring.rhobs
