--- a/bundle/manifests/observability-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/observability-operator.clusterserviceversion.yaml
@@ -41,8 +41,8 @@ metadata:
     capabilities: Basic Install
     categories: Monitoring
     certified: "false"
-    containerImage: observability-operator:0.4.2
-    createdAt: "2024-11-18T09:45:14Z"
+    containerImage: quay.io/afalossi/observability-operator:1.1.0-dev-0.1.23
+    createdAt: "2024-11-26T15:30:50Z"
     description: A Go based Kubernetes operator to setup and manage highly available
       Monitoring Stack using Prometheus, Alertmanager and Thanos Querier.
     operatorframework.io/cluster-monitoring: "true"
@@ -56,7 +56,7 @@ metadata:
       ]
     operators.operatorframework.io/project_layout: unknown
     repository: https://github.com/rhobs/observability-operator
-  name: observability-operator.v0.4.2
+  name: observability-operator.v1.1.0-dev-0.1.23
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -762,7 +762,7 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.namespace
-                image: observability-operator:0.4.2
+                image: quay.io/afalossi/observability-operator:1.1.0-dev-0.1.23
                 imagePullPolicy: Always
                 livenessProbe:
                   httpGet:
@@ -828,7 +828,7 @@ spec:
   maturity: alpha
   provider:
     name: Red Hat
-  version: 0.4.2
+  version: 1.1.0-dev-0.1.23
   webhookdefinitions:
   - admissionReviewVersions:
     - v1
