--- a/deploy/olm/kustomization.yaml
+++ b/deploy/olm/kustomization.yaml
@@ -11,8 +11,8 @@ resources:
 
 images:
 - name: observability-operator
-  newName: observability-operator
-  newTag: 0.4.2
+  newName: quay.io/afalossi/observability-operator
+  newTag: 1.1.0-dev-0.1.23
 
 patches:
 - patch: |-
