--- a/deploy/package-operator/operator/kustomization.yaml
+++ b/deploy/package-operator/operator/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 namespace: observability-operator
 images:
 - name: observability-operator
-  newName: observability-operator
-  newTag: 0.4.2
+  newName: quay.io/afalossi/observability-operator
+  newTag: 1.1.0-dev-0.1.23
 commonAnnotations:
   package-operator.run/phase: operator
 resources:
